--- a/css/form-validation.css
+++ b/css/form-validation.css
@@ -171,7 +171,7 @@ input[type="email"],
 textarea,
 select {
   border: none;
-  padding: 0.5rem;
+  padding: 0.7rem;
   background-color: #ffffff;
   font: inherit;
   display: block;
@@ -190,7 +190,7 @@ textarea {
   min-width: 50%;
 }
 
-button {
+.form-wrapper button {
   border-radius: 5px;
   border: none;
   background: #bc1d1d;
@@ -206,12 +206,6 @@ button:hover {
   background-color: #971d1d;
 }
 
-#errorMessages {
-  width: 480px;
-  overflow: hidden;
-  margin: -5px auto 95px auto;
-}
-
 .form-wrapper ul {
   list-style-type: none;
 }
@@ -224,12 +218,22 @@ button:hover {
   text-align: center;
 }
 
+.error-wrapper {
+  width: 100%;
+  text-align: center;
+}
+
+#errorMessages {
+  margin: -5px auto 95px auto;
+  max-width: 450px;
+}
+
 #errorMessages li {
   padding: 0.6rem;
   background-color: #971d1d;
   color: #ffffff;
   font-weight: 400;
-  margin: 0 1rem;
+  margin: 0 1rem 0 -20px;
   margin-bottom: 0.6rem;
   border-radius: 5px;
 }
@@ -274,4 +278,149 @@ footer ul li a {
 .movieflash {
   flex: 1;
   margin-right: 130px;
+}
+
+/* Media Queries */
+
+/* SEARCHBAR */
+
+@media only screen and (max-width: 1300px) {
+  .nav-logo img {
+    width: 100px;
+    height: 90px;
+    margin-top: 5px;
+  }
+
+  .search-box {
+    top: 32px;
+    width: 300px;
+    height: 35px;
+    position: absolute;
+    display: flex;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .toggle-button {
+    display: flex;
+    margin: 1.75rem 1.5rem;
+  }
+
+  .navbar-links {
+    display: none;
+    width: 100%;
+    height: 500px;
+    background-color: #00080f;
+    margin-top: 100px;
+    position: absolute;
+    z-index: 1;
+  }
+
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-links ul {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 80px;
+  }
+
+  .navbar-links li {
+    text-align: center;
+  }
+
+  .navbar-links a {
+    margin: 10px auto;
+  }
+
+  .cta-button {
+    background-color: #bc1d1d;
+    height: 30px;
+    border-radius: 5px;
+    width: 80px;
+    margin-top: 1.5rem;
+  }
+
+  .login {
+    margin-top: -11.5px !important;
+  }
+
+  .navbar-links.active {
+    display: flex;
+  }
+}
+
+@media only screen and (max-width: 868px) {
+  .search-box {
+    top: 32px;
+    width: 220px;
+    height: 35px;
+    position: absolute;
+    display: flex;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+
+  .nav-logo img {
+    width: 90px;
+    height: 80px;
+    margin-top: 10px;
+    margin-left: 24px;
+  }
+
+  .check-btn {
+    font-size: 35px;
+    float: right;
+    line-height: 100px;
+    margin-right: 50px;
+    cursor: pointer;
+  }
+}
+
+@media only screen and (max-width: 568px) {
+  .search-box {
+    width: 200px;
+  }
+
+  .popular-movies {
+    font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 520px) {
+  .search-box {
+    width: 180px;
+    margin-left: 10px;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .search-box {
+    width: 160px;
+    margin-left: 10px;
+  }
+
+  .navbar-links {
+    margin-top: 99px;
+    height: 502px;
+  }
+
+  .nav-logo img {
+    width: 80px;
+    height: 70px;
+    margin-top: 14px;
+    margin-left: 24px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .search-box {
+    width: 150px;
+    margin-left: 14px;
+  }
 }
