--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 html {
   min-height: 100%;
   position: relative;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -15,6 +16,31 @@ body {
   font-family: "Roboto", sans-serif;
   color: #ffffff;
   background-color: #00080f;
+}
+
+.back-to-top {
+  position: fixed;
+  bottom: 16px;
+  right: 32px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  justify-content: center;
+  font-size: 32px;
+  text-decoration: none;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.4s;
+}
+
+.back-to-top.active {
+  bottom: 32px;
+  pointer-events: auto;
+  opacity: 1;
+  z-index: 1000;
 }
 
 /* Navbar */
