--- a/css/form-validation.css
+++ b/css/form-validation.css
@@ -107,17 +107,56 @@ body {
   top: 0.75rem;
   right: 1rem;
   display: none;
-  flex-direction: column;
-  justify-content: space-between;
   width: 30px;
-  height: 21px;
+  height: 20px;
 }
 
-.toggle-button .bar {
+.toggle-button span,
+.toggle-button span::before,
+.toggle-button span::after {
+  background: #ffffff;
+  border-radius: 3px;
+  display: block;
+  content: "";
+  position: absolute;
+  width: 30px;
   height: 3px;
-  width: 100%;
-  background-color: #fff;
-  border-radius: 10px;
+  margin-top: 10px;
+
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.toggle-button span::before {
+  margin-top: -10px;
+}
+
+.toggle-button span::after {
+  margin-top: 10px;
+}
+
+.toggle-button.click span {
+  background: transparent;
+}
+
+.toggle-button.click span::before {
+  margin-top: 0;
+
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.toggle-button.click span::after {
+  margin-top: 0;
+
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 /* Searchbar */
@@ -143,10 +182,6 @@ body {
   border-style: none;
   outline: none;
   text-align: center;
-}
-
-.search:focus {
-  outline: 1px solid #bc1d1d;
 }
 
 .search-btn {
@@ -225,7 +260,7 @@ textarea {
   border-radius: 5px;
   border: none;
   background: #bc1d1d;
-  width: 50%;
+  width: 200px;
   padding: 12px 0;
   color: #ffffff;
   font-weight: 500;
@@ -349,6 +384,10 @@ footer ul li a {
     z-index: 1;
   }
 
+  .navbar-links.click {
+    display: flex;
+  }
+
   .navbar {
     flex-direction: column;
     align-items: flex-start;
@@ -379,10 +418,6 @@ footer ul li a {
 
   .login {
     margin-top: -11.5px !important;
-  }
-
-  .navbar-links.active {
-    display: flex;
   }
 }
 
