--- a/css/movies.css
+++ b/css/movies.css
@@ -112,17 +112,56 @@ body {
   top: 0.75rem;
   right: 1rem;
   display: none;
-  flex-direction: column;
-  justify-content: space-between;
   width: 30px;
-  height: 21px;
+  height: 20px;
 }
 
-.toggle-button .bar {
+.toggle-button span,
+.toggle-button span::before,
+.toggle-button span::after {
+  background: #ffffff;
+  border-radius: 3px;
+  display: block;
+  content: "";
+  position: absolute;
+  width: 30px;
   height: 3px;
-  width: 100%;
-  background-color: #fff;
-  border-radius: 10px;
+  margin-top: 10px;
+
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.toggle-button span::before {
+  margin-top: -10px;
+}
+
+.toggle-button span::after {
+  margin-top: 10px;
+}
+
+.toggle-button.click span {
+  background: transparent;
+}
+
+.toggle-button.click span::before {
+  margin-top: 0;
+
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.toggle-button.click span::after {
+  margin-top: 0;
+
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 /* Searchbar */
@@ -148,10 +187,6 @@ body {
   border-style: none;
   outline: none;
   text-align: center;
-}
-
-.search:focus {
-  outline: 1px solid #bc1d1d;
 }
 
 .search-btn {
@@ -230,16 +265,18 @@ input[type="text"] {
   position: fixed;
   visibility: hidden;
   z-index: 10000;
-  top: 50%;
+  top: -50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: #00080f;
   width: 100%;
   height: 100%;
+  transition: all 0.5s ease-in-out;
 }
 
 .movie-popup.active {
   visibility: visible;
+  top: 50%;
 }
 
 .popup-wrapper {
@@ -374,6 +411,10 @@ footer ul li a {
     z-index: 1;
   }
 
+  .navbar-links.click {
+    display: flex;
+  }
+
   .navbar {
     flex-direction: column;
     align-items: flex-start;
@@ -404,10 +445,6 @@ footer ul li a {
 
   .login {
     margin-top: -11.5px !important;
-  }
-
-  .navbar-links.active {
-    display: flex;
   }
 }
 
