--- a/css/movies.css
+++ b/css/movies.css
@@ -412,7 +412,7 @@ footer ul li a {
   .navbar-links {
     display: none;
     width: 100%;
-    height: 280px;
+    height: 300px;
     background-color: #00080f;
     margin-top: 100px;
     position: absolute;
@@ -441,13 +441,15 @@ footer ul li a {
 
   .navbar-links a {
     margin: 10px auto;
+    font-size: 1.5rem;
   }
 
   .cta-button {
     background-color: #bc1d1d;
-    height: 30px;
+    height: 40px;
     border-radius: 5px;
     width: 80px;
+    padding-right: 90px;
     margin-top: 1.5rem;
   }
 
@@ -504,7 +506,6 @@ footer ul li a {
 
   .navbar-links {
     margin-top: 99px;
-    height: 280px;
   }
 
   .nav-logo img {
