--- a/css/styles.css
+++ b/css/styles.css
@@ -511,7 +511,7 @@ footer ul li a {
   .navbar-links {
     display: none;
     width: 100%;
-    height: 500px;
+    height: 300px;
     background-color: #00080f;
     margin-top: 100px;
     position: absolute;
@@ -540,13 +540,15 @@ footer ul li a {
 
   .navbar-links a {
     margin: 10px auto;
+    font-size: 1.5rem;
   }
 
   .cta-button {
     background-color: #bc1d1d;
-    height: 30px;
+    height: 40px;
     border-radius: 5px;
     width: 80px;
+    padding-right: 90px;
     margin-top: 1.5rem;
   }
 
