--- a/css/form-validation.css
+++ b/css/form-validation.css
@@ -61,12 +61,12 @@ body {
   cursor: pointer;
   width: 118px;
   height: 100px;
-  margin-left: 44px;
+  margin-left: 25px;
 }
 
 .navbar-links ul {
-  font-size: 1.1rem;
-  margin: 1.5rem 44px;
+  font-size: 1.5rem;
+  margin: 1.1rem 25px;
   display: flex;
 }
 
@@ -87,9 +87,9 @@ body {
 
 .cta-button {
   background-color: #bc1d1d;
-  height: 30px;
+  height: 38px;
   border-radius: 5px;
-  margin: auto 20px auto 20px;
+  margin: 13px 20px auto 20px;
 }
 
 .cta-button:hover {
@@ -97,7 +97,7 @@ body {
 }
 
 .login {
-  margin-top: -11.5px;
+  margin-top: -12.5px;
 }
 
 /* Hamburger Menu */
@@ -377,7 +377,7 @@ footer ul li a {
   .navbar-links {
     display: none;
     width: 100%;
-    height: 500px;
+    height: 300px;
     background-color: #00080f;
     margin-top: 100px;
     position: absolute;
@@ -406,13 +406,15 @@ footer ul li a {
 
   .navbar-links a {
     margin: 10px auto;
+    font-size: 1.5rem;
   }
 
   .cta-button {
     background-color: #bc1d1d;
-    height: 30px;
+    height: 40px;
     border-radius: 5px;
     width: 80px;
+    padding-right: 90px;
     margin-top: 1.5rem;
   }
 
@@ -473,7 +475,6 @@ footer ul li a {
 
   .navbar-links {
     margin-top: 99px;
-    height: 502px;
   }
 
   .nav-logo img {
