--- a/css/movies.css
+++ b/css/movies.css
@@ -74,12 +74,12 @@ body {
   cursor: pointer;
   width: 118px;
   height: 100px;
-  margin-left: 44px;
+  margin-left: 25px;
 }
 
 .navbar-links ul {
-  font-size: 1.1rem;
-  margin: 1.5rem 44px;
+  font-size: 1.5rem;
+  margin: 1.1rem 25px;
   display: flex;
 }
 
@@ -100,9 +100,9 @@ body {
 
 .cta-button {
   background-color: #bc1d1d;
-  height: 30px;
+  height: 38px;
   border-radius: 5px;
-  margin: auto 20px auto 20px;
+  margin: 13px 20px auto 20px;
 }
 
 .cta-button:hover {
@@ -110,7 +110,7 @@ body {
 }
 
 .login {
-  margin-top: -11.5px;
+  margin-top: -12.5px;
 }
 
 /* Hamburger Menu */
